--- a/bcftools/1.5/Dockerfile
+++ b/bcftools/1.5/Dockerfile
@@ -11,7 +11,7 @@ LABEL software.version="1.5"
 LABEL about.summary="Bcftools is a program for variant calling and manipulating VCFs and BCFs"
 LABEL about.home="https://samtools.github.io/bcftools/"
 LABEL about.documentation="https://samtools.github.io/bcftools/"
-LABEL license="https://samtools.github.io/bcftools/"
+LABEL about.license_file="https://github.com/samtools/bcftools/blob/develop/LICENSE"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
