--- a/emboss/6.5.7/Dockerfile
+++ b/emboss/6.5.7/Dockerfile
@@ -9,7 +9,7 @@ LABEL software.version="6.5.7"
 LABEL about.summary="software analysis package"
 LABEL about.home="http://emboss.sourceforge.net/what/"
 LABEL about.documentation="http://emboss.sourceforge.net/docs/"
-LABEL license="http://emboss.sourceforge.net/licence/"
+LABEL about.license_file="http://emboss.sourceforge.net/licence/"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
