--- a/frc_align/20150723/Dockerfile
+++ b/frc_align/20150723/Dockerfile
@@ -10,7 +10,7 @@ LABEL software.version="20150723"
 LABEL about.summary="Computes FRC from SAM/BAM file and not from afg files"
 LABEL about.home="https://github.com/jts/frc_courve"
 LABEL about.documentation="https://github.com/jts/frc_courve"
-LABEL license="https://github.com/jts/frc_courve"
+LABEL about.license_file="https://github.com/jts/frc_courve"
 LABEL about.tags="Genomics"
 
 ################## INSTALLATION ######################
