--- a/peptideprophet/201510131012/Dockerfile
+++ b/peptideprophet/201510131012/Dockerfile
@@ -9,7 +9,7 @@ LABEL software.version="201510131012"
 LABEL about.summary="Peptide assignment statistics and validation"
 LABEL about.home="http://peptideprophet.sourceforge.net/"
 LABEL about.documentation="http://peptideprophet.sourceforge.net/"
-LABEL license="http://peptideprophet.sourceforge.net/"
+LABEL about.license_file="http://peptideprophet.sourceforge.net/"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
