--- a/peptideshaker/1.16.17/Dockerfile
+++ b/peptideshaker/1.16.17/Dockerfile
@@ -9,7 +9,7 @@ LABEL software.version="1.16.17"
 LABEL about.summary="interpretation of proteomics identification results"
 LABEL about.home="http://compomics.github.io/projects/peptide-shaker.html"
 LABEL about.documentation="http://compomics.github.io/projects/peptide-shaker.html"
-LABEL license="Apache-2.0"
+LABEL about.license_file="Apache-2.0"
 LABEL license_file="https://spdx.org/licenses/Apache-2.0.html"
 LABEL about.tags="Proteomics, biotools"
 
