--- a/pia/1.3.0/Dockerfile
+++ b/pia/1.3.0/Dockerfile
@@ -9,7 +9,7 @@ LABEL software.version="1.3.0"
 LABEL about.summary="Compile PIA XML files and run analysis pipelines for protein inference with this image"
 LABEL about.home="https://github.com/mpc-bioinformatics/pia"
 LABEL about.documentation="https://github.com/julianu/pia-tutorial"
-LABEL license="https://github.com/mpc-bioinformatics/pia"
+LABEL about.license_file="https://github.com/mpc-bioinformatics/pia"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
