--- a/samtools/1.2/Dockerfile
+++ b/samtools/1.2/Dockerfile
@@ -9,7 +9,7 @@ LABEL software.version="1.2"
 LABEL about.summary="Tools for manipulating next-generation sequencing data"
 LABEL about.home="https://github.com/samtools/samtools"
 LABEL about.documentation="https://github.com/samtools/samtools"
-LABEL license="https://github.com/samtools/samtools"
+LABEL about.license_file="https://github.com/samtools/samtools"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
