--- a/sga/0.10.13/Dockerfile
+++ b/sga/0.10.13/Dockerfile
@@ -10,7 +10,7 @@ LABEL software.version="0.10.13"
 LABEL about.summary="De novo sequence assembler using string graphs"
 LABEL about.home="https://github.com/jts/sga"
 LABEL about.documentation="https://github.com/jts/sga/wiki"
-LABEL license="https://github.com/jts/sga"
+LABEL about.license_file="https://github.com/jts/sga"
 LABEL about.tags="Genomics"
 
 
