--- a/soapec/2.03/Dockerfile
+++ b/soapec/2.03/Dockerfile
@@ -8,7 +8,7 @@ LABEL software.version="2.03"
 LABEL about.summary="A correction tool for SOAPdenovo"
 LABEL about.home="http://soap.genomics.org.cn/soapdenovo.html"
 LABEL about.documentation="http://soap.genomics.org.cn/soapdenovo.html"
-LABEL license="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html"
+LABEL about.license_file="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html"
 LABEL about.tags="Genomics"
 
 
