--- a/tandem/10-12-01-1/Dockerfile
+++ b/tandem/10-12-01-1/Dockerfile
@@ -9,7 +9,7 @@ LABEL software.version="10-12-01-1"
 LABEL about.summary="software that can match tandem mass spectra with peptide sequences"
 LABEL about.home="http://www.thegpm.org/tandem/"
 LABEL about.documentation="http://www.thegpm.org/tandem/"
-LABEL license="http://www.thegpm.org/tandem/"
+LABEL about.license_file="https://opensource.org/licenses/artistic-license-1.0"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
