--- a/tpp/4.8/Dockerfile
+++ b/tpp/4.8/Dockerfile
@@ -9,7 +9,7 @@ LABEL software.version="4.8"
 LABEL about.summary="a collection of integrated tools for MS/MS proteomics"
 LABEL about.home="http://tools.proteomecenter.org/wiki/index.php?title=Software:TPP"
 LABEL about.documentation="http://tools.proteomecenter.org/wiki/index.php?title=Software:TPP"
-LABEL license="http://tools.proteomecenter.org/wiki/index.php?title=Software:TPP"
+LABEL about.license_file="http://tools.proteomecenter.org/wiki/index.php?title=Software:TPP"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
