--- a/clustal-omega/1.2.1-1/Dockerfile
+++ b/clustal-omega/1.2.1-1/Dockerfile
@@ -9,7 +9,7 @@ LABEL software.version="1.2.1-1"
 LABEL about.summary="general purpose multiple sequence alignment program for proteins"
 LABEL about.home="http://www.clustal.org/omega/"
 LABEL about.documentation="http://www.clustal.org/omega/#about.documentation"
-LABEL license="http://www.clustal.org/omega/"
+LABEL about.license_file="http://www.clustal.org/omega/"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
