--- a/dia-umpire/1.4256/Dockerfile
+++ b/dia-umpire/1.4256/Dockerfile
@@ -9,7 +9,7 @@ LABEL software.version="1.4256"
 LABEL about.summary="computational analysis of data independent acquisition (DIA) mass spectrometry-based proteomics data"
 LABEL about.home="http://diaumpire.sourceforge.net"
 LABEL about.documentation="http://diaumpire.sourceforge.net"
-LABEL license="http://diaumpire.sourceforge.net"
+LABEL about.license_file="http://diaumpire.sourceforge.net"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
