--- a/openms/2.0.0/Dockerfile
+++ b/openms/2.0.0/Dockerfile
@@ -10,7 +10,7 @@ LABEL software.version="2.0.0-4build2"
 LABEL about.summary="C++ libraries ans tools for MS/MS data analysis"
 LABEL about.home="http://open-ms.sourceforge.net/"
 LABEL about.documentation="http://open-ms.sourceforge.net/"
-LABEL license="http://open-ms.sourceforge.net/"
+LABEL about.license_file="http://open-ms.sourceforge.net/"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
