--- a/samtools/1.3.1/Dockerfile
+++ b/samtools/1.3.1/Dockerfile
@@ -10,7 +10,7 @@ LABEL software.version="1.3.1"
 LABEL about.summary="Tools for manipulating next-generation sequencing data"
 LABEL about.home="https://github.com/samtools/samtools"
 LABEL about.documentation="https://github.com/samtools/samtools"
-LABEL license="https://github.com/samtools/samtools"
+LABEL about.license_file="https://github.com/samtools/samtools"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
