--- a/toppas/1.11.1-3/Dockerfile
+++ b/toppas/1.11.1-3/Dockerfile
@@ -9,7 +9,7 @@ LABEL software.version="2016012"
 LABEL about.summary="a graphical workflow editor for the analysis of high-throughput proteomics data"
 LABEL about.home="http://open-ms.sourceforge.net/workflow-integration/toppasworkflows/"
 LABEL about.documentation="http://open-ms.sourceforge.net/workflow-integration/toppasworkflows/"
-LABEL license="http://open-ms.sourceforge.net/workflow-integration/toppasworkflows/"
+LABEL about.license_file="http://open-ms.sourceforge.net/workflow-integration/toppasworkflows/"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
