minor changes in the license

--- a/aliscore/2.0/Dockerfile
+++ b/aliscore/2.0/Dockerfile
@@ -12,6 +12,7 @@ LABEL about.summary="Aliscore is designed to filter alignment ambiguous or rando
 LABEL about.home="https://www.zfmk.de/en/research/research-centres-and-groups/aliscore"
 LABEL about.documentation="https://www.zfmk.de/dateien/atoms/files/aliscore_v.2.0_manual_0.pdf"
 LABEL about.license_file="https://www.gnu.org/licenses/old-licenses/gpl-2.0.html"
+LABEL about.license="SPDX:GPL-2.0-only"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
