--- a/bcftools/1.5/Dockerfile
+++ b/bcftools/1.5/Dockerfile
@@ -12,6 +12,7 @@ LABEL about.summary="Bcftools is a program for variant calling and manipulating 
 LABEL about.home="https://samtools.github.io/bcftools/"
 LABEL about.documentation="https://samtools.github.io/bcftools/"
 LABEL about.license_file="https://github.com/samtools/bcftools/blob/develop/LICENSE"
+LABEL about.license="SPDX:MIT"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
