--- a/bwa/0.7.12/Dockerfile
+++ b/bwa/0.7.12/Dockerfile
@@ -10,6 +10,7 @@ LABEL about.summary="Burrow-Wheeler Aligner for pairwise alignment between DNA s
 LABEL about.home="http://bio-bwa.sourceforge.net/"
 LABEL about.documentation="http://bio-bwa.sourceforge.net/"
 LABEL about.license_file="http://bio-bwa.sourceforge.net/"
+LABEL about.license="SPDX:GPL-3.0"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
