--- a/abyss/1.9.0/Dockerfile
+++ b/abyss/1.9.0/Dockerfile
@@ -11,6 +11,7 @@ LABEL about.summary="ABySS is a *de novo* sequence assembler"
 LABEL about.home="http://www.bcgsc.ca/platform/bioinfo/software/abyss/releases/1.9.0"
 LABEL about.documentation="https://github.com/bcgsc/abyss#abyss"
 LABEL about.license_file="https://github.com/bcgsc/abyss/blob/master/LICENSE"
+LABEL about.license="SPDX:GPL-3.0-only"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
