--- a/biocontainers/Dockerfile
+++ b/biocontainers/Dockerfile
@@ -10,6 +10,7 @@ LABEL about.summary="Base image for BioDocker"
 LABEL about.home="http://biocontainers.pro"
 LABEL about.documentation="https://github.com/BioContainers/specs/wiki"
 LABEL about.license_file="https://github.com/BioContainers/containers/blob/master/LICENSE"
+LABEL about.license="SPDX:Apache-2.0"
 LABEL about.tags="Genomics,Proteomics,Transcriptomics,General,Metabolomics"
 
 ################## MAINTAINER ######################
