minor changes in the license

--- a/crux/2.1/Dockerfile
+++ b/crux/2.1/Dockerfile
@@ -10,6 +10,7 @@ LABEL about.summary="a software toolkit for tandem mass spectrometry analysis"
 LABEL about.home="http://cruxtoolkit.sourceforge.net/"
 LABEL about.documentation="http://cruxtoolkit.sourceforge.net/"
 LABEL about.license_file="http://cruxtoolkit.sourceforge.net/"
+LABEL about.license="SPDX:Apache-2.0"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
