--- a/discovardenovo/52488/Dockerfile
+++ b/discovardenovo/52488/Dockerfile
@@ -9,7 +9,7 @@ LABEL software.version="52488"
 LABEL about.summary="Genome variant discovery through assembly"
 LABEL about.home="http://www.broadinstitute.org/software/discovar/blog/?page_id=19"
 LABEL about.documentation="http://www.broadinstitute.org/software/discovar/blog/?page_id=19"
-LABEL about.license_file="http://www.broadinstitute.org/software/discovar/blog/?page_id=19"
+LABEL about.license_file="ftp://ftp.broadinstitute.org/pub/crd/Discovar/LICENSE"
 LABEL about.tags="Genomics"
 
 
