--- a/emboss/6.5.7/Dockerfile
+++ b/emboss/6.5.7/Dockerfile
@@ -10,6 +10,7 @@ LABEL about.summary="software analysis package"
 LABEL about.home="http://emboss.sourceforge.net/what/"
 LABEL about.documentation="http://emboss.sourceforge.net/docs/"
 LABEL about.license_file="http://emboss.sourceforge.net/licence/"
+LABEL about.license="SPDX:GPL-3.0"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
