--- a/fastqc/0.11.5/Dockerfile
+++ b/fastqc/0.11.5/Dockerfile
@@ -10,6 +10,7 @@ LABEL about.summary="A quality control tool for high throughput sequence data."
 LABEL about.home="http://www.bioinformatics.babraham.ac.uk/projects/fastqc/"
 LABEL about.documentation="http://www.bioinformatics.babraham.ac.uk/projects/fastqc/Help/"
 LABEL about.license_file="https://www.gnu.org/copyleft/gpl.html"
+LABEL about.license="SPDX:GPL-3.0"
 LABEL about.tags="General"
 
 
