--- a/fastxtools/0.0.14/Dockerfile
+++ b/fastxtools/0.0.14/Dockerfile
@@ -10,7 +10,8 @@ LABEL about.summary="a collection of command line tools for Short-Reads FASTA/FA
 LABEL about.home="http://hannonlab.cshl.edu/fastx_toolkit/"
 LABEL about.documentation="http://hannonlab.cshl.edu/fastx_toolkit/commandline.html"
 LABEL about.license_file="http://hannonlab.cshl.edu/fastx_toolkit/license.html"
-LABEL about.tags="General"
+LABEL about.license="SPDX:AGPL-3.0-only"
+LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
 MAINTAINER Alicia Mastretta-Yanes <amastretta@conabio.gob.mx>
