minor changes in the license

--- a/magicblast/1.3.0/Dockerfile
+++ b/magicblast/1.3.0/Dockerfile
@@ -2,6 +2,7 @@
 FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
+
 LABEL base.image="biocontainers:latest"
 LABEL version="3"
 LABEL software="magicblast"
@@ -9,7 +10,8 @@ LABEL software.version="1.3.0"
 LABEL about.summary="Magic-BLAST is a new tool for mapping large sets of next-generation RNA or DNA sequencing runs against a whole genome or transcriptome"
 LABEL about.home="https://github.com/ncbi/magicblast"
 LABEL about.documentation="https://ncbi.github.io/magicblast/"
-LABEL License_file = /home/biodocker/bin/LICENSE
+LABEL about.license_file="https://ncbi.github.io/magicblast/dev/copyright.html"
+LABEL about.license="SPDX:MIT"
 LABEL about.tags="BLAST"
 
 
