--- a/pepnovo+/20120423/Dockerfile
+++ b/pepnovo+/20120423/Dockerfile
@@ -10,6 +10,7 @@ LABEL about.summary="de novo sequencing of low precision MS/MS data"
 LABEL about.home="http://proteomics.ucsd.edu/Software/PepNovo/"
 LABEL about.documentation="http://proteomics.ucsd.edu/Software/PepNovo/"
 LABEL about.license_file="http://proteomics.ucsd.edu/Software/PepNovo/"
+LABEL about.license="SPDX:CC-BY-NC-4.0"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
