--- a/peptideprophet/201510131012/Dockerfile
+++ b/peptideprophet/201510131012/Dockerfile
@@ -2,6 +2,7 @@
 FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
+
 LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="PeptideProphet"
@@ -10,6 +11,7 @@ LABEL about.summary="Peptide assignment statistics and validation"
 LABEL about.home="http://peptideprophet.sourceforge.net/"
 LABEL about.documentation="http://peptideprophet.sourceforge.net/"
 LABEL about.license_file="http://peptideprophet.sourceforge.net/"
+LABEL about.license="SPDX:	GPL-2.0-only"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
