--- a/pia/1.3.0/Dockerfile
+++ b/pia/1.3.0/Dockerfile
@@ -10,6 +10,7 @@ LABEL about.summary="Compile PIA XML files and run analysis pipelines for protei
 LABEL about.home="https://github.com/mpc-bioinformatics/pia"
 LABEL about.documentation="https://github.com/julianu/pia-tutorial"
 LABEL about.license_file="https://github.com/mpc-bioinformatics/pia"
+LABEL about.license="SPDX:Apache-2.0"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
