--- a/novor/1b/Dockerfile
+++ b/novor/1b/Dockerfile
@@ -9,7 +9,7 @@ LABEL software.version="1b"
 LABEL about.summary="real-time peptide de novo sequencing"
 LABEL about.home="http://www.rapidnovor.com/"
 LABEL about.documentation="http://www.rapidnovor.com/"
-LABEL about.license_file="Academic only: https://www.rapidnovor.com/rndl/novor_aca_eula.txt"
+LABEL about.license_file="https://www.rapidnovor.com/rndl/novor_aca_eula.txt"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
