--- a/openms/2.0.0/Dockerfile
+++ b/openms/2.0.0/Dockerfile
@@ -10,7 +10,8 @@ LABEL software.version="2.0.0-4build2"
 LABEL about.summary="C++ libraries ans tools for MS/MS data analysis"
 LABEL about.home="http://open-ms.sourceforge.net/"
 LABEL about.documentation="http://open-ms.sourceforge.net/"
-LABEL about.license_file="http://open-ms.sourceforge.net/"
+LABEL about.license_file="https://github.com/OpenMS/OpenMS/blob/develop/LICENSE"
+LABEL about.license="SPDX:BSD-1-Clause"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
