--- a/openms/2.2.0/Dockerfile
+++ b/openms/2.2.0/Dockerfile
@@ -10,7 +10,8 @@ LABEL software.version="2.2"
 LABEL about.summary="C++ libraries ans tools for MS/MS data analysis"
 LABEL about.home="http://www.openms.org/"
 LABEL about.documentation="http://ftp.mi.fu-berlin.de/pub/OpenMS/release2.2.0-about.documentation/html/index.html"
-LABEL about.license_file="http://www.openms.org/"
+LABEL about.license_file="https://github.com/OpenMS/OpenMS/blob/develop/LICENSE"
+LABEL about.license="SPDX:BSD-1-Clause"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
