--- a/percolator/3.0/Dockerfile
+++ b/percolator/3.0/Dockerfile
@@ -9,7 +9,8 @@ LABEL software.version="3.0"
 LABEL about.summary="Semi-supervised learning for peptide identification from shotgun proteomics datasets"
 LABEL about.home="http://percolator.ms/"
 LABEL about.documentation="http://percolator.ms/"
-LABEL about.license_file="http://percolator.ms/"
+LABEL about.license_file="https://github.com/percolator/percolator/blob/master/license.txt"
+LABEL about.license="SPDX:Apache-2.0"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
