--- a/picard/2.3.0/Dockerfile
+++ b/picard/2.3.0/Dockerfile
@@ -10,6 +10,7 @@ LABEL about.summary="A set of Java command line tools for manipulating high-thro
 LABEL about.home="https://github.com/broadinstitute/picard/"
 LABEL about.documentation="https://github.com/broadinstitute/picard/"
 LABEL about.license_file="https://github.com/broadinstitute/picard/blob/master/LICENSE.txt"
+LABEL about.license="SPDX:MIT"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
