--- a/snpeff/4.1k/Dockerfile
+++ b/snpeff/4.1k/Dockerfile
@@ -10,6 +10,7 @@ LABEL about.summary="Genetic variant annotation and effect prediction toolbox"
 LABEL about.home="http://snpeff.sourceforge.net/"
 LABEL about.documentation="http://snpeff.sourceforge.net/"
 LABEL about.license_file="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html"
+LABEL about.license="SPDX:GPL-2.0-only"
 LABEL about.tags="Genomics"
 
 
