--- a/soapdenovo/240/Dockerfile
+++ b/soapdenovo/240/Dockerfile
@@ -10,6 +10,7 @@ LABEL about.summary="a novel short-read assembly method that can build a de novo
 LABEL about.home="http://soap.genomics.org.cn/soapdenovo.html"
 LABEL about.documentation="http://soap.genomics.org.cn/soapdenovo.html"
 LABEL about.license_file="http://soap.genomics.org.cn/soapdenovo.html"
+LABEL about.license="SPDX:GPL-3.0-only"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
