--- a/velvet/1.2.10/Dockerfile
+++ b/velvet/1.2.10/Dockerfile
@@ -10,6 +10,7 @@ LABEL about.summary="Short read de novo assembler using de Bruijn graphs"
 LABEL about.home="http://www.ebi.ac.uk/~zerbino/velvet/ | https://github.com/dzerbino/velvet"
 LABEL about.documentation="https://www.zfmk.de/dateien/atoms/files/aliscore_v.2.0_manual_0.pdf"
 LABEL about.license_file="https://www.gnu.org/licenses/old-licenses/gpl-2.0.html"
+LABEL about.license="SPDX:GPL-2.0-only"
 LABEL about.tags="Genomics"
 
 ENV ZIP=velvet_1.2.10.tgz
