--- a/samtools/1.3.1/Dockerfile
+++ b/samtools/1.3.1/Dockerfile
@@ -11,6 +11,8 @@ LABEL about.summary="Tools for manipulating next-generation sequencing data"
 LABEL about.home="https://github.com/samtools/samtools"
 LABEL about.documentation="https://github.com/samtools/samtools"
 LABEL about.license_file="https://github.com/samtools/samtools"
+LABEL about.license_file="https://github.com/samtools/samtools/blob/develop/LICENSE"
+LABEL about.license="SPDX:MIT"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
