--- a/searchgui/2.8.6/Dockerfile
+++ b/searchgui/2.8.6/Dockerfile
@@ -9,9 +9,10 @@ LABEL version="1"
 LABEL software="SearchGUI"
 LABEL software.version="2.8.6"
 LABEL about.summary="graphical user interface for proteomics identification search engines"
-LABEL about.home="https://code.google.com/p/searchgui/"
-LABEL about.documentation="https://code.google.com/p/searchgui/"
-LABEL about.license_file="https://code.google.com/p/searchgui/"
+LABEL about.home="https://github.com/compomics/searchgui/"
+LABEL about.documentation="https://github.com/compomics/searchgui/"
+LABEL about.license_file="https://github.com/compomics/searchgui/blob/master/README.txt"
+LABEL about.license="SPDX:Apache-2.0"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
