--- a/spades/3.6.0/Dockerfile
+++ b/spades/3.6.0/Dockerfile
@@ -9,6 +9,7 @@ LABEL about.summary="Tools (written in C using htslib) for manipulating next-gen
 LABEL about.home="http://bioinf.spbau.ru/spades"
 LABEL about.documentation="http://bioinf.spbau.ru/spades"
 LABEL about.license_file="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html"
+LABEL about.license="SPDX:GPL-2.0-only"
 LABEL about.tags="Genomics"
 
 
