--- a/spectra-cluster-cli/1.0/Dockerfile
+++ b/spectra-cluster-cli/1.0/Dockerfile
@@ -10,6 +10,7 @@ LABEL about.summary="PRIDE Cluster algorithm to cluster heterogeneous mass spect
 LABEL about.home="https://github.com/spectra-cluster/spectra-cluster-cli"
 LABEL about.documentation="https://github.com/spectra-cluster/spectra-cluster-cli"
 LABEL about.license_file="https://github.com/spectra-cluster/spectra-cluster-cli/LICENSE"
+LABEL about.license="SPDX:Apache-2.0"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
