--- a/stacks/1.41/Dockerfile
+++ b/stacks/1.41/Dockerfile
@@ -11,6 +11,7 @@ LABEL about.summary="Stacks was developed to work with restriction enzyme-based 
 LABEL about.home="http://catchenlab.life.illinois.edu/stacks/"
 LABEL about.documentation="http://catchenlab.life.illinois.edu/stacks/"
 LABEL about.license_file="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html"
+LABEL about.license="SPDX:GPL-2.0-only"
 LABEL about.tags="Genomics"
 
 
