--- a/tophat/2.1.1/Dockerfile
+++ b/tophat/2.1.1/Dockerfile
@@ -10,6 +10,7 @@ LABEL about.summary="TopHat is a fast splice junction mapper for RNA-Seq reads"
 LABEL about.home="https://ccb.jhu.edu/software/tophat/index.shtml"
 LABEL about.documentation="https://ccb.jhu.edu/software/tophat/index.shtml"
 LABEL about.license_file="https://opensource.org/licenses/Artistic-2.0"
+LABEL about.license="SPDX:Artistic-2.0"
 LABEL about.tags="Genomics, Transcriptomics"
 
 ################## BEGIN INSTALLATION ######################
